// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon when Entypo Icons should render all Entypo icons with default color and size 1`] = `
<Text
  style={
    {
      "color": "#000",
      "fontSize": 24,
    }
  }
>
  Entypo-icon-entypo1
</Text>
`;

exports[`Icon when Entypo Icons should render all Entypo icons with default color and size 2`] = `
<Text
  style={
    {
      "color": "#000",
      "fontSize": 24,
    }
  }
>
  Entypo-icon-entypo2
</Text>
`;

exports[`Icon when Entypo Icons should render all Entypo icons with default color and size 3`] = `
<Text
  style={
    {
      "color": "#000",
      "fontSize": 24,
    }
  }
>
  Entypo-icon-entypo3
</Text>
`;

exports[`Icon when Entypo Icons should render all Entypo icons with default color and size 4`] = `
<Text
  style={
    {
      "color": "#000",
      "fontSize": 24,
    }
  }
>
  Entypo-icon-entypo4
</Text>
`;

exports[`Icon when Entypo Icons should render all Entypo icons with given color and size 1`] = `
<Text
  style={
    {
      "color": "#FF7849",
      "fontSize": 30,
    }
  }
>
  Entypo-icon-entypo1
</Text>
`;

exports[`Icon when Entypo Icons should render all Entypo icons with given color and size 2`] = `
<Text
  style={
    {
      "color": "#FF7849",
      "fontSize": 30,
    }
  }
>
  Entypo-icon-entypo2
</Text>
`;

exports[`Icon when Entypo Icons should render all Entypo icons with given color and size 3`] = `
<Text
  style={
    {
      "color": "#FF7849",
      "fontSize": 30,
    }
  }
>
  Entypo-icon-entypo3
</Text>
`;

exports[`Icon when Entypo Icons should render all Entypo icons with given color and size 4`] = `
<Text
  style={
    {
      "color": "#FF7849",
      "fontSize": 30,
    }
  }
>
  Entypo-icon-entypo4
</Text>
`;

exports[`Icon when Feather Icons should render all Feather icons with default color and size 1`] = `
<Text
  style={
    {
      "color": "#000",
      "fontSize": 24,
    }
  }
>
  Feather-icon-feather1
</Text>
`;

exports[`Icon when Feather Icons should render all Feather icons with default color and size 2`] = `
<Text
  style={
    {
      "color": "#000",
      "fontSize": 24,
    }
  }
>
  Feather-icon-feather2
</Text>
`;

exports[`Icon when Feather Icons should render all Feather icons with default color and size 3`] = `
<Text
  style={
    {
      "color": "#000",
      "fontSize": 24,
    }
  }
>
  Feather-icon-feather3
</Text>
`;

exports[`Icon when Feather Icons should render all Feather icons with default color and size 4`] = `
<Text
  style={
    {
      "color": "#000",
      "fontSize": 24,
    }
  }
>
  Feather-icon-feather4
</Text>
`;

exports[`Icon when Feather Icons should render all Feather icons with given color and size 1`] = `
<Text
  style={
    {
      "color": "#FF7849",
      "fontSize": 30,
    }
  }
>
  Feather-icon-feather1
</Text>
`;

exports[`Icon when Feather Icons should render all Feather icons with given color and size 2`] = `
<Text
  style={
    {
      "color": "#FF7849",
      "fontSize": 30,
    }
  }
>
  Feather-icon-feather2
</Text>
`;

exports[`Icon when Feather Icons should render all Feather icons with given color and size 3`] = `
<Text
  style={
    {
      "color": "#FF7849",
      "fontSize": 30,
    }
  }
>
  Feather-icon-feather3
</Text>
`;

exports[`Icon when Feather Icons should render all Feather icons with given color and size 4`] = `
<Text
  style={
    {
      "color": "#FF7849",
      "fontSize": 30,
    }
  }
>
  Feather-icon-feather4
</Text>
`;
